--- a/listproject/test-output/old/Default suite/methods.html
+++ b/listproject/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93f295">  <td>21/12/20 19:39:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SetUnique.setValue()[pri:0, instance:setunique.SetUnique@1c55f277]">setValue</td> 
-  <td>main@1428494531</td>   <td></td> </tr>
+<tr bgcolor="a78a81">  <td>21/12/28 02:03:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SetPract.test1()[pri:0, instance:setproject03.SetPract@376a312c]">test1</td> 
+  <td>main@1163088324</td>   <td></td> </tr>
+<tr bgcolor="a78a81">  <td>21/12/28 02:03:45</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SetPract.test12()[pri:0, instance:setproject03.SetPract@376a312c]">test12</td> 
+  <td>main@1163088324</td>   <td></td> </tr>
+<tr bgcolor="a78a81">  <td>21/12/28 02:03:45</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SetPract.test142()[pri:0, instance:setproject03.SetPract@376a312c]">test142</td> 
+  <td>main@1163088324</td>   <td></td> </tr>
 </table>
